# DevCommon

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: DevCommonConfig.cmake.in
src/: CMakeLists.txt
src/logger/: CMakeLists.txt
src/logger/include/: LogStreamHelper.h  Logger.h  logs.h
src/logger/src/: LogStreamHelper.cpp  Logger.cpp
src/logger/tests/: CMakeLists.txt  tests.cpp
